contrast fixed

--- a/lab2/src/styles/custom.scss
+++ b/lab2/src/styles/custom.scss
@@ -20,6 +20,10 @@
   justify-content: center;
 }
 
+.nav-item {
+  color: $links-color;
+}
+
 // <992px = 1 item, 992-1200 = 2 items, >1200 = 3 items per row
 @media (max-width: 992px) {
   #linebreak-for-nav {
