--- a/lab2/src/styles/variables.scss
+++ b/lab2/src/styles/variables.scss
@@ -1,1 +1,3 @@
 @import "./src/styles/bootstrap/scss/bootstrap";
+
+$links-color: #0052b1;
